--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Kubernetes CLI Manager</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        html, body {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+        #root {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
     <div id="root"></div>
